# gitpeek

./: .gitignore  CLAUDE.md  LICENSE  README.md  index.html  package-lock.json  package.json
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/lib/: AssistantConfig.svelte  AssistantOutput.svelte  DiffViewer.svelte  FileTree.svelte  Header.svelte
